# apk-tweak

./: .editorconfig  .gitignore  .markdownlint.json  .megalinter.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .shellcheckrc  .yamllint.yml  AGENTS.md  CLAUDE.md  DEBLOAT_PATTERNS.md  DEPENDENCY_AUDIT.md  GEMINI.MD  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTOR_SUMMARY.md  biome.json  find-unused-strings.sh  gradle.properties  lint-all.sh  minify_all.py  patch_optimizer5.py  pr_description.txt  pyproject.toml  requirements.txt  shellcheck.sh  todo.md  unused-strings.sh
.github/: FUNDING.yml  README.md  copilot-instructions.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: python.agent.md
.github/instructions/: INSTRUCTIONS.md  actions.instructions.md  markdown.instructions.md  performance.instructions.md
.github/prompts/: best-practices.prompt.md  cleanup.prompt.md  remember.prompt.md
.github/workflows/: Check-releases.yml  aio.yml  build-telegram.yml  clean.yml  copilot-setup-steps.yml  image-optimizer.yml  lint-enforce.yml  mega-linter.yml  merge.yml  shellcheck.yml  shellfmt.yml  template.yml  update-git-submodules.yml  validate-configs.yml
.mypy_cache/3.11/: _ast.data.json  _ast.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copyreg.data.json  copyreg.meta.json  dataclasses.data.json  dataclasses.meta.json  (+34 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.11/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.11/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.11/importlib/: __init__.data.json  __init__.meta.json  _abc.data.json  _abc.meta.json  _bootstrap.data.json  _bootstrap.meta.json  _bootstrap_external.data.json  _bootstrap_external.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  readers.data.json  readers.meta.json
.mypy_cache/3.11/importlib/metadata/: __init__.data.json  __init__.meta.json  _meta.data.json  _meta.meta.json
.mypy_cache/3.11/importlib/resources/: __init__.data.json  __init__.meta.json  _common.data.json  _common.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.11/multiprocessing/: shared_memory.data.json  shared_memory.meta.json  spawn.data.json  spawn.meta.json
.mypy_cache/3.11/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.11/pathlib/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/sys/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/zipfile/: __init__.data.json  __init__.meta.json
benchmarks/: benchmark_optimizer.py
config/: README.md  development_pipeline.json  full_pipeline.json  modify_pipeline.json  simple_pipeline.json
docs/: LINTING.md
examples/: README.md  USAGE.md  advanced-config.json  advanced-rconfig.json  advanced-revanced-config.json  basic-config.json  custom_plugin.py  full-pipeline-config.json  magisk-config.json
minified/rvp/: __init__.py  ad_patterns.py  cli.py  config.py  constants.py  context.py  core.py  optimizer.py  types.py  utils.py  validators.py
minified/rvp/engines/: __init__.py  android_builder.py  discord.py  dtlx.py  lspatch.py  media_optimizer.py  modify.py  revanced.py  rkpairip.py  string_cleaner.py  whatsapp.py
minified/rvp/plugins/: __init__.py
rvp/: __init__.py  ad_patterns.py  cli.py  config.py  constants.py  context.py  core.py  optimizer.py  types.py  utils.py  validators.py
rvp/engines/: __init__.py  android_builder.py  discord.py  dtlx.py  lspatch.py  luniume.py  magisk.py  media_optimizer.py  modify.py  optimizer.py  revanced.py  rkpairip.py  string_cleaner.py  whatsapp.py
rvp/plugins/: __init__.py  example_plugin.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_security.py  test_context.py  test_core.py  test_dtlx.py  test_engines.py  test_media_optimizer.py  test_media_optimizer_execution.py  test_modify_engine.py  test_optimizer.py  test_optimizer_resources.py  test_performance.py  test_plugins.py  test_revanced.py  test_string_cleaner.py  test_utils.py  test_validators.py
tests/engines/: test_media_optimizer.py  test_optimizer.py  test_string_cleaner.py
